# simpel_clock

./: Cargo.toml  README.md  install
src/: main.rs
src/models/: build_clock.rs  launch_win.rs  mod.rs  time.rs
