[package]
name = "clock"
version = "0.1.0"
authors = ["div-styl"]
description = "this rustain project which is about creating simple clock with GTK it's a part of my learning"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gtk4/index.html" 
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = "0.7.2"
pango = "0.18.0"
